refactor: Remove dead code + consolidate code + properly scope docstrings
